--- a/app/src/main/res/layout/content_slideshow_item.xml
+++ b/app/src/main/res/layout/content_slideshow_item.xml
@@ -14,8 +14,8 @@
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="horizontal"
-            android:clipToPadding="false">
+            android:clipToPadding="false"
+            android:scrollbars="horizontal">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -23,28 +23,161 @@
     </FrameLayout>
 
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="300dp"
             android:layout_height="300dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:background="@drawable/cardview_bg"
+            android:elevation="4dp"
             app:cardBackgroundColor="#6adacb"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:cardCornerRadius="10dp">
 
 
             <ImageView
+                android:id="@+id/image_camera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@mipmap/pic" />
+
+            <ImageView
+                android:id="@+id/image_preview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/image"
+                android:scaleType="fitXY"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/text_category_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_1menit"
+                        android:layout_width="60dp"
+                        android:layout_height="20dp"
+                        android:background="#00FFD8"
+                        android:gravity="center"
+                        android:text="@string/_1menit"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/text_category"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:gravity="center|start"
+                        android:paddingLeft="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+
+                </LinearLayout>
+
+                <FrameLayout
+                    android:id="@+id/text_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/black_opa_80">
+
+                    <TextView
+                        android:id="@+id/text_preview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|bottom"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="8dp"
+                        android:lineSpacingMultiplier="0.95"
+                        android:textColor="@color/white"
+                        android:textSize="27sp"
+                        android:textStyle="bold" />
+
+                </FrameLayout>
+            </LinearLayout>
+
+            <!--PunchLine layout-->
+
+
+            <FrameLayout
+                android:id="@+id/punchline_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black_opa_70"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/punchline1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|center_horizontal"
+                    android:layout_marginTop="55dp"
+                    android:background="@color/black_opa_95"
+                    android:paddingBottom="2dp"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:paddingTop="2dp"
+                    android:textColor="#6adacb" />
+
+                <TextView
+                    android:id="@+id/punchline2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="115dp"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    android:textSize="25sp" />
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="50dp"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/text_1menit2"
+                        android:layout_width="55dp"
+                        android:layout_height="20dp"
+                        android:background="#00FFD8"
+                        android:gravity="center"
+                        android:text="@string/_1menit"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/text_category2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:gravity="center"
+                        android:paddingLeft="3dp"
+                        android:paddingRight="3dp"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+
+                </LinearLayout>
+
+
+            </FrameLayout>
 
 
         </android.support.v7.widget.CardView>
@@ -54,11 +187,9 @@
             android:id="@+id/edittext_container"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_input_title"
@@ -75,8 +206,9 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_drawable"
+                android:inputType="textMultiLine|textCapSentences"
                 android:maxLength="40"
-                android:maxLines="1"
+                android:maxLines="3"
                 android:minHeight="50dp"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
@@ -92,6 +224,7 @@
             android:id="@+id/cardViewCategory"
             android:layout_width="300dp"
             android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
@@ -100,10 +233,7 @@
             android:focusable="true"
             app:cardBackgroundColor="#49a5d6"
             app:cardCornerRadius="20dp"
-            app:cardElevation="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edittext_container">
+            app:cardElevation="2dp">
 
             <FrameLayout
                 android:id="@+id/cardViewCategory_e"
@@ -129,9 +259,89 @@
         </android.support.v7.widget.CardView>
 
 
+        <!--Punchline editText-->
+
+        <LinearLayout
+            android:id="@+id/punchline_container1"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/punchline_label1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="PunchLine 1"
+                android:textColor="@color/grey_500"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/text_punchline1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_drawable"
+                android:inputType="textMultiLine|textCapSentences"
+                android:maxLength="40"
+                android:maxLines="3"
+                android:minHeight="50dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/grey_500"
+                android:textColorHint="@color/grey_400"
+                android:textCursorDrawable="@null" />
+
+
+        </LinearLayout>
+
+        <!--Punchline editText-->
+
+        <LinearLayout
+            android:id="@+id/punchline_container2"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/punchline_label2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="PunchLine 2"
+                android:textColor="@color/grey_500"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/text_punchline2"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_drawable"
+                android:inputType="textMultiLine|textCapSentences"
+                android:maxLength="40"
+                android:maxLines="3"
+                android:minHeight="50dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/grey_500"
+                android:textColorHint="@color/grey_400"
+                android:textCursorDrawable="@null" />
+
+
+        </LinearLayout>
+
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="35dp"
             android:background="@color/teal_300"
             app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +363,7 @@
 
         </FrameLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
