--- a/app/src/main/res/layout/slide_item.xml
+++ b/app/src/main/res/layout/slide_item.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginEnd="15dp">
 
     <LinearLayout
@@ -16,7 +17,7 @@
             android:layout_height="@dimen/slide_item_size"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
-            android:background="@drawable/cardview_bg">
+            android:background="@drawable/cardview_bg_selected">
 
             <TextView
                 android:id="@+id/slide_item_page_number"
@@ -26,6 +27,25 @@
                 android:textColor="#86a2b5"
                 android:textSize="27sp"
                 android:textStyle="bold" />
+
+            <android.support.v7.widget.CardView
+                android:layout_margin="2dp"
+                android:id="@+id/slide_thumbnail"
+                app:cardCornerRadius="10dp"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:contentDescription="@string/image"
+                    android:scaleType="fitXY"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+
+            </android.support.v7.widget.CardView>
+
 
         </FrameLayout>
 
@@ -40,6 +60,8 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/deleteButton"
