--- a/app/src/main/res/layout/content_slideshow_item.xml
+++ b/app/src/main/res/layout/content_slideshow_item.xml
@@ -97,7 +97,7 @@
 
                     <TextView
                         android:id="@+id/text_preview"
-                        android:layout_width="wrap_content"
+                        android:layout_width="1000dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|bottom"
                         android:layout_marginBottom="10dp"
@@ -136,13 +136,13 @@
 
                 <TextView
                     android:id="@+id/punchline2"
-                    android:layout_width="match_parent"
+                    android:layout_width="1000dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="115dp"
                     android:gravity="center_horizontal"
                     android:textColor="@color/white"
-                    android:textSize="25sp" />
+                    android:textSize="27sp" />
 
 
                 <LinearLayout
