- Added resources for songs - Added text description for loading screen

--- a/app/src/main/res/layout/view_passcode_view.xml
+++ b/app/src/main/res/layout/view_passcode_view.xml
@@ -90,6 +90,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
+            android:text="100"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/progress_explanation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
