--- a/app/src/main/res/layout/content_slideshow_item.xml
+++ b/app/src/main/res/layout/content_slideshow_item.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/cardview_bg"
             android:elevation="4dp"
-            app:cardBackgroundColor="#6adacb"
+            app:cardBackgroundColor="#c9d8e2"
             app:cardCornerRadius="10dp">
 
 
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@mipmap/pic" />
+                android:src="@mipmap/pic_gray" />
 
             <ImageView
                 android:id="@+id/image_preview"
@@ -207,7 +207,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_drawable"
                 android:inputType="textMultiLine|textCapSentences"
-                android:maxLength="40"
+                android:maxLength="45"
                 android:maxLines="3"
                 android:minHeight="50dp"
                 android:paddingLeft="15dp"
@@ -258,6 +258,45 @@
 
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/music_card"
+            android:layout_width="300dp"
+            android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/cardview_bg"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardBackgroundColor="#ec5f72"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="2dp"
+            android:visibility="gone">
+
+            <FrameLayout
+                android:id="@+id/music_card_e"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?android:selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawableStart="@mipmap/music"
+                    android:drawablePadding="10dp"
+                    android:text="Music"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </FrameLayout>
+
+        </android.support.v7.widget.CardView>
+
 
         <!--Punchline editText-->
 
@@ -286,7 +325,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_drawable"
                 android:inputType="textMultiLine|textCapSentences"
-                android:maxLength="40"
+                android:maxLength="45"
                 android:maxLines="3"
                 android:minHeight="50dp"
                 android:paddingLeft="15dp"
@@ -325,7 +364,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext_drawable"
                 android:inputType="textMultiLine|textCapSentences"
-                android:maxLength="40"
+                android:maxLength="45"
                 android:maxLines="3"
                 android:minHeight="50dp"
                 android:paddingLeft="15dp"
