--- a/app/src/main/res/layout/view_passcode_view.xml
+++ b/app/src/main/res/layout/view_passcode_view.xml
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="100"
+            android:text="0%"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
